# AdbAutoPlayer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  app.go  app_darwin.go  app_linux.go  app_windows.go  go.mod  go.sum  main.go  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pytauri-bootstrap.cjs
.claude/: settings.local.json
.github/: codecov.yml  dependabot.yml
.github/codeql/: codeql-config.yml
.github/scripts/: MACOS_READ_THIS_IMPORTANT.txt  build_macos.sh  (+2 more)
config/: config.toml
data/: hero_synonyms.json
docs/: book.toml
frontend/: package-lock.json  package.json  vite.config.ts
internal/: processmanager.go
python/: pyproject.toml
scripts/: bundle-templates.cjs  pytauri-bootstrap.cjs
settings/: AFKJourney.toml  AdbAutoPlayer.toml
src-tauri/: .taurignore  Cargo.toml  pyproject.toml  tauri.bundle.json  tauri.bundle.windows.json  tauri.conf.json  tauri.conf.windows.json
src-tauri/Settings/: ADB.toml  AFKJourney.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/nsis/: installer-hooks.nsh
src-tauri/settings/: ADB.toml  AFKJourney.toml
src-tauri/src/: commands.rs  discord.rs  error.rs  lib.rs  log.rs  main.rs  notification.rs  settings.rs  tray.rs  window.rs
src-tauri/src-python/adb_auto_player/: __main__.py  main_cli.py  task_loader.py
src-tauri/src-python/adb_auto_player/commands/: __init__.py  debug.py
src-tauri/src-python/adb_auto_player/device/adb/: __init__.py  adb_client.py  adb_controller.py  adb_scanner.py  adb_utils.py  blue_stacks_at_translated_set_2_keyboard.py  blue_stacks_virtual_gamepad.py  blue_stacks_virtual_touch.py  device_stream.py
src-tauri/src-python/adb_auto_player/file_loader/: settings_loader.py
src-tauri/src-python/adb_auto_player/game/: _base.py  _input_mixin.py  _lifecycle_mixin.py  _screenshot_mixin.py  _task_mixin.py  _template_mixin.py  game.py
src-tauri/src-python/adb_auto_player/games/afk_journey/: base.py  battle_state.py  heroes.py  navigation.py  popup_message_handler.py  settings.py
src-tauri/src-python/adb_auto_player/games/afk_journey/minigames/: fishing.py  matching_cards.py
src-tauri/src-python/adb_auto_player/games/afk_journey/mixins/: _guild_scan_activeness.py  _guild_scan_names.py  _guild_scan_rankings.py  _guild_scan_setup.py  afk_stages.py  arcane_labyrinth.py  arena.py  dailies.py  dream_realm.py  duras_trials.py  frostfire_showdown.py  guild_member_scan.py  hero_scanner.py  homestead_helper.py  legend_trial.py  quests.py  ravaged_realm.py  sunlit_showdown.py  supreme_arena.py
src-tauri/src-python/adb_auto_player/games/afk_journey/services/: __init__.py  hero_scanner.py
src-tauri/src-python/adb_auto_player/games/blue_protocol_star_resonance/: blue_protocol_star_resonance.py  fishing.py  guild_advertisement.py  simple_gathering.py
src-tauri/src-python/adb_auto_player/image_manipulation/: hero_resizer.py
src-tauri/src-python/adb_auto_player/ipc_util/: ipc_model_converter.py
src-tauri/src-python/adb_auto_player/log/: logging_setup.py
src-tauri/src-python/adb_auto_player/models/decorators/: lru_cache_group.py
src-tauri/src-python/adb_auto_player/models/geometry/: point.py
src-tauri/src-python/adb_auto_player/models/pydantic/: __init__.py  adb_settings.py  app_settings.py  my_custom_routine_settings.py  toml_settings.py
src-tauri/src-python/adb_auto_player/ocr/: __init__.py  _backend.py  qwen2vl_backend.py  rapidocr_backend.py  tesseract_backend.py
src-tauri/src-python/adb_auto_player/scripts/: extract_frames.py
src-tauri/src-python/adb_auto_player/tauri_context/: cache.py  context.py
src-tauri/src-python/adb_auto_player/template_matching/: template_matcher.py
src-tauri/src-python/adb_auto_player/util/: summary_generator.py
src-tauri/src-python/scripts/: debug_chest_frames.py  test_activeness_ocr.py
src-tauri/src-python/tests/: test_device_stream.py  test_e2e_flow.py  test_game.py
src-tauri/src-python/tests/commands/: test_debug.py
src-tauri/src-python/tests/game/: test_vertical_offset.py
src-tauri/src-python/tests/games/afk_journey/mixins/: test_afkj_mixins.py  test_all_mixins_extended.py  test_guild_member_scan.py  test_guild_scan_rankings.py
src-tauri/src-python/tests/games/afk_journey/services/: test_hero_scanner.py
src-tauri/src-python/tests/models/geometry/: test_box.py  test_point.py
src-tauri/src-python/tests/ocr/: test_qwen2vl_backend.py
src-tauri/src-python/tests/ocr/test_tesseract_backend/: test_tesseract_backend_afkj_popup.py
src-tauri/src-python/tests/server/: test_server.py
src-tauri/src-python/tests/template_matching/: test_template_matching_benchmark.py  test_template_matching_integration.py
src-tauri/src-python/tests/utils/: test_execute_restart.py  test_ipc_model_converter.py  test_settings_loader.py  test_traceback_helper.py
(+343 files in other folders)
