[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"


[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "abort"
strip = true

# See: <https://pytauri.github.io/pytauri/0.5/usage/tutorial/build-standalone/#configure-tauri-cli>
[profile.bundle-dev]
inherits = "dev"

[profile.bundle-release]
inherits = "release"
