[project]
name = "adb-auto-player"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "yulesxoxo <https://github.com/yulesxoxo/yulesxoxo>" },
    { name = "Vale <https://github.com/Valextr/Valextr>" },
]
requires-python = ">=3.14"
dependencies = [
    "pytauri == 0.8.*",
    "pydantic == 2.*",
    "anyio == 4.*",
    "adbutils>=2.10.0,<3",
    "opencv-python>=4.10.0.84,<5",
    "pydantic>=2.10.5,<3",
    "av>=16.0.1,<17",
    "pillow>=11.1.0",
    "pytesseract>=0.3.13",
    "psutil>=7.0.0",
]

[project.scripts]
adb-auto-player = "adb_auto_player.main_cli:main"

[project.entry-points.pytauri]
ext_mod = "adb_auto_player.ext_mod"

[build-system]
requires = ["setuptools >= 80", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
required-version = ">=0.7.0"

[tool.setuptools.packages]
find = { where = ["src-python"] }
