[project]
name = "adb-auto-player"
version = "12.9.24"
description = ""
readme = "README.md"
authors = [
    { name = "yulesxoxo <https://github.com/yulesxoxo/yulesxoxo>" },
    { name = "Vale <https://github.com/Valextr/Valextr>" },
]
requires-python = ">=3.11"
dependencies = [
    "pytauri == 0.8.*",
    "pydantic>=2.13.4,<3",
    "anyio>=4.14.2,<5",
    "adbutils>=2.12.0,<3",
    "opencv-python>=5.0.0.93,<6",
    "av>=18.0.0,<19",
    "pillow>=12.3.0,<13",
    "pytesseract>=0.3.13,<0.4",
    "psutil>=7.2.2,<8",
    "numpy>=2.4.6,<2.5",
    "rapidocr>=3.9.2",
    "onnxruntime>=1.27.0"
]

[project.scripts]
adb-auto-player = "adb_auto_player.main_cli:main"

[project.entry-points.pytauri]
ext_mod = "adb_auto_player.ext_mod"

[build-system]
requires = ["setuptools >= 83.0.0", "setuptools-scm>=10.2.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
required-version = ">=0.9.11"

[tool.pytest.ini_options]
testpaths = ["src-python/tests"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = { where = ["src-python"], exclude = ["tests*", "*/tests*"] }

[tool.setuptools.package-data]
"*" = ["*.pyd", "*.so"]
